WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
181026
REGRESSION(
r226160
) Build broken when MEDIA_STREAM is disabled with MediaStreamRequest namespace confusion
https://bugs.webkit.org/show_bug.cgi?id=181026
Summary
REGRESSION(r226160) Build broken when MEDIA_STREAM is disabled with MediaStre...
Ms2ger (he/him; ⌚ UTC+1/+2)
Reported
2017-12-20 03:24:43 PST
In file included from DerivedSources/ForwardingHeaders/WebCore/MediaStreamRequest.h:1:0, from ../../Source/WebKit/UIProcess/UserMediaPermissionRequestProxy.h:24, from ../../Source/WebKit/UIProcess/UserMediaPermissionRequestManagerProxy.h:23, from ../../Source/WebKit/UIProcess/WebPageProxy.h:47, from ../../Source/WebKit/UIProcess/VisitedLinkStore.h:31, from ../../Source/WebKit/UIProcess/WebProcessPool.h:44, from ../../Source/WebKit/UIProcess/API/glib/WebKitWebContextPrivate.h:32, from ../../Source/WebKit/UIProcess/API/glib/WebKitInjectedBundleClient.cpp:28: ../../Source/WebCore/platform/mediastream/MediaStreamRequest.h:72:30: error: ‘MediaStreamRequest’ is not a member of ‘WebCore’ template<> struct EnumTraits<WebCore::MediaStreamRequest> { ^ ../../Source/WebCore/platform/mediastream/MediaStreamRequest.h:72:30: note: suggested alternative: ../../Source/WebCore/platform/mediastream/MediaStreamRequest.h:63:8: note: ‘MediaStreamRequest’ struct MediaStreamRequest { ^ ../../Source/WebCore/platform/mediastream/MediaStreamRequest.h:72:30: error: ‘MediaStreamRequest’ is not a member of ‘WebCore’ template<> struct EnumTraits<WebCore::MediaStreamRequest> { ^ ../../Source/WebCore/platform/mediastream/MediaStreamRequest.h:72:30: note: suggested alternative: ../../Source/WebCore/platform/mediastream/MediaStreamRequest.h:63:8: note: ‘MediaStreamRequest’ struct MediaStreamRequest { ^ ../../Source/WebCore/platform/mediastream/MediaStreamRequest.h:72:57: error: template argument 1 is invalid template<> struct EnumTraits<WebCore::MediaStreamRequest> { ^ In file included from ../../Source/WebKit/UIProcess/UserMediaPermissionRequestManagerProxy.h:23:0, from ../../Source/WebKit/UIProcess/WebPageProxy.h:47, from ../../Source/WebKit/UIProcess/VisitedLinkStore.h:31, from ../../Source/WebKit/UIProcess/WebProcessPool.h:44, from ../../Source/WebKit/UIProcess/API/glib/WebKitWebContextPrivate.h:32, from ../../Source/WebKit/UIProcess/API/glib/WebKitInjectedBundleClient.cpp:28: ../../Source/WebKit/UIProcess/UserMediaPermissionRequestProxy.h:38:408: error: ‘WebCore::MediaStreamRequest’ has not been declared static Ref<UserMediaPermissionRequestProxy> create(UserMediaPermissionRequestManagerProxy& manager, uint64_t userMediaID, uint64_t mainFrameID, uint64_t frameID, Ref<WebCore::SecurityOrigin>&& userMediaDocumentOrigin, Ref<WebCore::SecurityOrigin>&& topLevelDocumentOrigin, Vector<WebCore::CaptureDevice>&& audioDevices, Vector<WebCore::CaptureDevice>&& videoDevices, String&& deviceIDHashSalt, WebCore::MediaStreamRequest&& request) ^ ../../Source/WebKit/UIProcess/UserMediaPermissionRequestProxy.h:65:14: error: ‘MediaStreamRequest’ in namespace ‘WebCore’ does not name a type WebCore::MediaStreamRequest::Type requestType() const { return m_request.type; } ^ ../../Source/WebKit/UIProcess/UserMediaPermissionRequestProxy.h:68:364: error: ‘WebCore::MediaStreamRequest’ has not been declared UserMediaPermissionRequestProxy(UserMediaPermissionRequestManagerProxy&, uint64_t userMediaID, uint64_t mainFrameID, uint64_t frameID, Ref<WebCore::SecurityOrigin>&& userMediaDocumentOrigin, Ref<WebCore::SecurityOrigin>&& topLevelDocumentOrigin, Vector<WebCore::CaptureDevice>&& audioDevices, Vector<WebCore::CaptureDevice>&& videoDevices, String&&, WebCore::MediaStreamRequest&&); ^ ../../Source/WebKit/UIProcess/UserMediaPermissionRequestProxy.h:79:14: error: ‘MediaStreamRequest’ in namespace ‘WebCore’ does not name a type WebCore::MediaStreamRequest m_request; ^
Attachments
Patch
(3.02 KB, patch)
2017-12-20 04:31 PST
,
Ms2ger (he/him; ⌚ UTC+1/+2)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ms2ger (he/him; ⌚ UTC+1/+2)
Comment 1
2017-12-20 04:31:53 PST
Created
attachment 329910
[details]
Patch
WebKit Commit Bot
Comment 2
2017-12-20 06:32:02 PST
Comment on
attachment 329910
[details]
Patch Clearing flags on attachment: 329910 Committed
r226178
: <
https://trac.webkit.org/changeset/226178
>
WebKit Commit Bot
Comment 3
2017-12-20 06:32:03 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2017-12-20 06:33:26 PST
<
rdar://problem/36154920
>
Eric Carlson
Comment 5
2017-12-20 08:42:37 PST
(In reply to Ms2ger from
comment #1
)
> Created
attachment 329910
[details]
> Patch
Sorry about that, and thanks for the fix!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug