REGRESSION(r226160) Build broken when MEDIA_STREAM is disabled with MediaStreamRequest namespace confusion https://bugs.webkit.org/show_bug.cgi?id=181026

Unreviewed build fix.


Source/WebCore:

* platform/mediastream/MediaStreamRequest.h: Fix namespace, unconditionally include header.

Source/WebKit:

* UIProcess/UserMediaPermissionRequestManagerProxy.cpp:
(WebKit::UserMediaPermissionRequestManagerProxy::requestUserMediaPermissionForFrame):
  Remove UNUSED_PARAM macros that check for (undefined) members rather than params.


Canonical link: https://commits.webkit.org/196903@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@226178 268f45cc-cd09-0410-ab3c-d52691b4dbfc